--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,59 @@
-# Project exclude paths
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+*.classpath
+
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+#*.jar
+*.rar
+*.tar
+*.zip
+
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+.pmd
+
+# Eclipse    #
+##############
+.classpath
+.settings
+.settings/
+mintty.exe.stackdump
+
+# Folders to be ignored #
+#########################
+/bin/
 /target/
+/test-output/
+/helpers/
+/log/
+/out/
+/yworks/
+.idea/
+*.iml
+.allure/
