Update azure-pipelines.yml for Azure Pipelines
Added Cobertura tool info

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,6 +21,7 @@ steps:
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'clean cobertura:cobertura'
+    codeCoverageToolOption: Cobertura
 
 - task: PublishCodeCoverageResults@1
   inputs:
