Added Pipeline Artifact

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,5 +44,8 @@ steps:
     archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
     replaceExistingArchive: true
 
-
-    
+- task: PublishPipelineArtifact@1
+  inputs:
+    targetPath: '$(Pipeline.Workspace)'
+    artifact: 'CalcArtifacts'
+    publishLocation: 'pipeline'
